refactor: 统一放在template 目录下

--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     },
     "files": [
         "bin",
-        "template-app",
-        "template-app/.gitignore",
-        "template-lib",
+        "template",
         "dist"
     ],
     "scripts": {
