fix: npm error Can't restrict access to unscoped packages.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     },
     "keywords": [],
     "homepage": "https://github.com/cocojs-org/create-coco",
+    "publishConfig": {
+        "registry": "https://registry.npmjs.org/",
+        "access": "public"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/cocojs-org/create-coco.git"
